[package]
name = "reddit_browser"
version = "0.1.0"
edition = "2021"


[dependencies]
roux = "1.3.10"
tokio = { version = "1.15", features = ["full"] }
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
iced = { version = "0.3",  features = ["image", "debug", "tokio"] }
thiserror = "1.0"
